[package]
name = "metrics-exporter-statsd"
version = "0.6.0"
authors = ["Manish Bellani <mbellani@github.com>"]
edition = "2021"
license = "MIT"
description = "metrics-rs exporter that supports reporting metrics to StatsD"
readme = "README.md"
repository = "https://github.com/github/metrics-exporter-statsd"
homepage = "https://github.com/github/metrics-exporter-statsd"
keywords = ["metrics", "statsd"]
categories = ["observability", "operations"]

[dependencies]
cadence = { git = "ssh://git@github.com/Ironlight-Group/cadence.git", rev = "7e27ab20fb0b1f7912d274bbd7e342c84cbf8dba" }
metrics = "0.21"
thiserror = "1.0"
